2004-09-30	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-bar.c(exo_icon_bar_paint_item): Always draw the text
	  with ACTIVE or SELECTED state to work-around issues with gtk
	  themes that do not yet know about ExoIconBar. We need a real
	  solution here.
	* TODO: Added note about the ExoIconBar theme problem.

2004-09-25	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Version 0.1.1.

2004-09-24	Benedikt Meurer <benny@xfce.org>

	* exo/exo-ice.c, exo/exo-ice.h: Add ICE module based upon the
	  ice-layer from xfce4-session and the gnome-ice module of
	  libgnomeui.
	* configure.ac: Add check for ICE/XSM libraries.

2004-09-23	Benedikt Meurer <benny@xfce.org>

	* exo/exo-md5.c: Add a fallback implementation for the MD5 algorithm,
	  taken from ROX-Filer. Only used if MD5Init isn't found on the
	  system.

2004-09-14	Benedikt Meurer <benny@xfce.org>

	* Initial import.