@@ -1,6 +1,6 @@
-- ExoIconBar: add style properties for active_item_text_color and 
-  cursor_item_text_color to get around problems with gtk themes.
-
+- The current style and color handling in ExoIconBar isn't optimal and kinda
+  hacky after all. We've to replace that with a better implementation one
+  day.
 
 URIs:
 -----
